Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -97,6 +97,7 @@
     "already-installed": "Ja instal·lat",
     "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Import",
     "amount-without-discount": "Preu sense descompte",
     "and": "i",
@@ -445,6 +446,7 @@
     "default-role": "Grup d'usuari pred.",
     "default-tax": "Impost predeterminat",
     "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Magatzem per defecte",
     "delete": "Eliminar",
@@ -1772,6 +1774,7 @@
     "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitzar",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Actualitzar estoc",
     "update-supplier-prices": "Actualitzar preus de proveïdors",
     "update-time": "Hora d'actualització",
