--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -97,6 +97,7 @@
     "already-installed": "Already installed",
     "already-installed-p": "Program already installed",
     "always-to-company-email": "Always to the company email",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Amount",
     "amount-without-discount": "Amount without discount",
     "and": "and",
@@ -445,6 +446,7 @@
     "default-role": "Default user group",
     "default-tax": "Default tax",
     "default-to-company-email": "By default to the company email",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "By default to the user's email",
     "default-warehouse": "Default warehouse",
     "delete": "Remove",
@@ -1772,6 +1774,7 @@
     "until-hour": "Until hour",
     "until-subaccount": "Until subaccount",
     "update": "Update",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Update stock",
     "update-supplier-prices": "Update supplier prices",
     "update-time": "Update time",
