--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -97,6 +97,7 @@
     "already-installed": "Ya instalado",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Subtotal",
     "amount-without-discount": "Precio sin descuento",
     "and": "y",
@@ -445,6 +446,7 @@
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Impuesto predeterminado",
     "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Almacén predefinido",
     "delete": "Eliminar",
@@ -1772,6 +1774,7 @@
     "until-hour": "Hora fin",
     "until-subaccount": "Hasta subcuenta",
     "update": "Actualizar",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Actualizar precios de proveedores",
     "update-time": "Hora de actualización",
