--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -97,6 +97,7 @@
     "already-installed": "Bada instalado",
     "already-installed-p": "Programa jadanik instalatuta dago",
     "always-to-company-email": "Beti enpresaren posta elektronikora",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Zenbatekoa",
     "amount-without-discount": "Prezioa beherapenik gabe",
     "and": "eta",
@@ -445,6 +446,7 @@
     "default-role": "Erabiltzaile talde lehentetsia",
     "default-tax": "Zerga lehenetsia",
     "default-to-company-email": "Lehenespenez enpresaren posta elektronikora",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Lehenespenez erabiltzailearen posta elektronikora",
     "default-warehouse": "Biltegi lehenetsia",
     "delete": "Kendu",
@@ -1772,6 +1774,7 @@
     "until-hour": "Amaiera ordua",
     "until-subaccount": "Azpikontura arte",
     "update": "Eguneratu",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Stocka eguneratu",
     "update-supplier-prices": "Hornitzaileen prezioak eguneratu",
     "update-time": "Eguneratze ordua",
