--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -97,6 +97,7 @@
     "already-installed": "Déjà installé",
     "already-installed-p": "Le programme est déjà installé",
     "always-to-company-email": "Toujours à l'email de l'entreprise",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Montant",
     "amount-without-discount": "Quantité sans remise",
     "and": "et",
@@ -445,6 +446,7 @@
     "default-role": "Groupe d'utilisateurs par défaut",
     "default-tax": "Imposition par défaut",
     "default-to-company-email": "Par défaut à l'adresse e-mail de l'entreprise",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Par défaut à l'email de l'utilisateur",
     "default-warehouse": "Entrepôt par défaut",
     "delete": "supprimer",
@@ -1772,6 +1774,7 @@
     "until-hour": "Jusqu'à l'heure",
     "until-subaccount": "Jusqu'au sous-compte",
     "update": "Mise à jour",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Mise à jour du stock",
     "update-supplier-prices": "Mise à jour des prix fournisseurs",
     "update-time": "Heure de mise à jour",
