--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -97,6 +97,7 @@
     "already-installed": "Già installato",
     "already-installed-p": "Il programma è già installato",
     "always-to-company-email": "Sempre alla mail aziendale",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Quantità",
     "amount-without-discount": "Importo senza sconto",
     "and": "e",
@@ -445,6 +446,7 @@
     "default-role": "Ruolo predefinito",
     "default-tax": "imposta-predefinita",
     "default-to-company-email": "Per impostazione predefinita, la email aziendale",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Per impostazione predefinita, l'e-mail dell'utente",
     "default-warehouse": "Magazzino predefinito",
     "delete": "rimuovere",
@@ -1772,6 +1774,7 @@
     "until-hour": "Fino all'ora",
     "until-subaccount": "Fino a subconto",
     "update": "aggiornare",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "Orario di aggiornamento",
