--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -97,6 +97,7 @@
     "already-installed": "Już zainstalowano",
     "already-installed-p": "Program jest już zainstalowany",
     "always-to-company-email": "Zawsze na email firmy",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
     "and": "y",
@@ -445,6 +446,7 @@
     "default-role": "Domyślna grupa użytkowników",
     "default-tax": "Domyślny podatek",
     "default-to-company-email": "Domyślnie na e-mail firmy",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Domyślnie na email użytkownika",
     "default-warehouse": "Domyślny magazyn",
     "delete": "Usuń",
@@ -1772,6 +1774,7 @@
     "until-hour": "Godzina końcowa",
     "until-subaccount": "Do subkonta",
     "update": "Aktualizować",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Aktualizuj zapasy",
     "update-supplier-prices": "Aktualizacja cen dostawców",
     "update-time": "Czas aktualizacji",
