--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -97,6 +97,7 @@
     "already-installed": "Ja instal·lat",
     "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Import",
     "amount-without-discount": "Preu sense desconte",
     "and": "i",
@@ -445,6 +446,7 @@
     "default-role": "Grup d'usuari per defecte",
     "default-tax": "Impost predeterminat",
     "default-to-company-email": "Per defecte a l'email de l'empresa",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Per defecte a l'email de l'usuari",
     "default-warehouse": "Almagasén predeterminat",
     "delete": "Borrar",
@@ -1772,6 +1774,7 @@
     "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitza",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Actualitza l'estoc",
     "update-supplier-prices": "update-supplier-prices",
     "update-time": "Hora de l'actualització",
