--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -97,6 +97,7 @@
     "already-installed": "Bereits installiert",
     "already-installed-p": "Das Programm ist bereits installiert",
     "always-to-company-email": "Immer an die Unternehmens-E-Mail",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Menge",
     "amount-without-discount": "Preis ohne Rabatt",
     "and": "und",
@@ -445,6 +446,7 @@
     "default-role": "Standard Benutzergruppe",
     "default-tax": "Standardsteuer",
     "default-to-company-email": "Standardmäßig an die E-Mail des Unternehmens",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Standardmäßig an die Benutzer-E-Mail",
     "default-warehouse": "Standard Lager",
     "delete": "entfernen",
@@ -1772,6 +1774,7 @@
     "until-hour": "bis zur Stunde",
     "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Lagerbestand aktualisieren",
     "update-supplier-prices": "aktullieren Lieferantenpreise",
     "update-time": "Aktuallierungszeit",
