--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -97,6 +97,7 @@
     "already-installed": "Xa instalado",
     "already-installed-p": "O programa xa está instalado",
     "always-to-company-email": "Sempre ó email da empresa",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Cantidade",
     "amount-without-discount": "Prezo sen desconto",
     "and": "e",
@@ -445,6 +446,7 @@
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Imposto predeterminado",
     "default-to-company-email": "Por defecto ó email da empresa",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Por defecto ó email do usuario",
     "default-warehouse": "Almacén por defecto",
     "delete": "Eliminar",
@@ -1772,6 +1774,7 @@
     "until-hour": "Hora fin",
     "until-subaccount": "Ata subconta",
     "update": "Actualizar",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Actualizar prezos provedores",
     "update-time": "hora de actualización",
