--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -97,6 +97,7 @@
     "already-installed": "Já instalado",
     "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
+    "always-to-config-email": "Siempre al email de la configuración",
     "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
     "and": "e",
@@ -445,6 +446,7 @@
     "default-role": "F",
     "default-tax": "Imposto padrão",
     "default-to-company-email": "Por padrão ao e-mail da empresa",
+    "default-to-config-email": "Por defecto al email de la configuración",
     "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
@@ -1772,6 +1774,7 @@
     "until-hour": "até-hora",
     "until-subaccount": "até a subconta",
     "update": "Atualizar",
+    "update-docs-address": "Actualizar documentos abiertos",
     "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
