Actualizadas las traducciones y la versión.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -97,7 +97,7 @@
     "already-installed": "Ja instal·lat",
     "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre a l'email de la configuració",
     "amount": "Import",
     "amount-without-discount": "Preu sense descompte",
     "and": "i",
@@ -446,7 +446,7 @@
     "default-role": "Grup d'usuari pred.",
     "default-tax": "Impost predeterminat",
     "default-to-company-email": "Por defecto al email de la empresa",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Per defecte a l'email de la configuració",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Magatzem per defecte",
     "delete": "Eliminar",
@@ -730,8 +730,8 @@
     "full-access": "Accés complet",
     "full-path": "Ruta completa",
     "gap-found": "Forat trobat per al número %numero%, dia %fecha%, %codserie% i empresa %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gap-found-not-fillable": "S'ha detectat un buit pel número %numero%, dia %fecha%, %codserie% i empresa %idempresa%, però no s'omplirà.",
+    "gaps-out-of-range": "S'han trobat %count% buits que no es podran omplir perquè estan a més de 1000 números del darrer.",
     "general": "General",
     "general-concepts": "Conceptes generals",
     "general-data": "Dades generals",
@@ -1774,7 +1774,7 @@
     "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitzar",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Actualitzar documents oberts",
     "update-stock": "Actualitzar estoc",
     "update-supplier-prices": "Actualitzar preus de proveïdors",
     "update-time": "Hora d'actualització",
