--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -446,7 +446,7 @@
     "default-role": "Ruolo predefinito",
     "default-tax": "imposta-predefinita",
     "default-to-company-email": "Per impostazione predefinita, la email aziendale",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Usa per impostazione predefinita l'email della configurazione",
     "default-to-user-email": "Per impostazione predefinita, l'e-mail dell'utente",
     "default-warehouse": "Magazzino predefinito",
     "delete": "rimuovere",
