--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1560,7 +1560,7 @@
     "sort-by-date-asc": "Seřadit podle data vzestupně",
     "sort-by-date-desc": "Seřadit podle data sestupně",
     "sort-by-debit-asc": "Seřadit podle debetu vzestupně",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Seřadit podle debetu sestupně",
     "sort-by-description-asc": "Seřadit podle popisu vzestupně",
     "sort-by-description-desc": "Seřadit podle popisu sestupně",
     "sort-by-price-asc": "Seřadit podle ceny vzestupně",
