--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -730,7 +730,7 @@
     "full-access": "voller Zugriff",
     "full-path": "vollständigen Pfad",
     "gap-found": "L",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gap-found-not-fillable": "Für die Nummer %numero%, den Tag %fecha%, %codserie% und das Unternehmen %idempresa% wurde eine Lücke gefunden; sie wird jedoch nicht ausgefüllt.",
     "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "Allgemeines",
     "general-concepts": "Allgemeine Konzepte",
