--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -97,7 +97,7 @@
     "already-installed": "Already installed",
     "already-installed-p": "Program already installed",
     "always-to-company-email": "Always to the company email",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Always to configured email",
     "amount": "Amount",
     "amount-without-discount": "Amount without discount",
     "and": "and",
@@ -446,7 +446,7 @@
     "default-role": "Default user group",
     "default-tax": "Default tax",
     "default-to-company-email": "By default to the company email",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Default to configured email",
     "default-to-user-email": "By default to the user's email",
     "default-warehouse": "Default warehouse",
     "delete": "Remove",
@@ -730,8 +730,8 @@
     "full-access": "Full access",
     "full-path": "Full path",
     "gap-found": "Gap found for number %numero%, day %fecha%, %codserie% and company %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gap-found-not-fillable": "Gap found for number %numero%, date %fecha%, series %codserie% and company %idempresa%; however it will not be filled.",
+    "gaps-out-of-range": "Found %count% gaps that cannot be filled because they are more than 1000 numbers away from the last one.",
     "general": "General",
     "general-concepts": "General concepts",
     "general-data": "General data",
@@ -1774,7 +1774,7 @@
     "until-hour": "Until hour",
     "until-subaccount": "Until subaccount",
     "update": "Update",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Update open documents",
     "update-stock": "Update stock",
     "update-supplier-prices": "Update supplier prices",
     "update-time": "Update time",
