--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -97,7 +97,7 @@
     "already-installed": "Xa instalado",
     "already-installed-p": "O programa xa está instalado",
     "always-to-company-email": "Sempre ó email da empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre ao correo da configuración",
     "amount": "Cantidade",
     "amount-without-discount": "Prezo sen desconto",
     "and": "e",
@@ -446,7 +446,7 @@
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Imposto predeterminado",
     "default-to-company-email": "Por defecto ó email da empresa",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Por defecto ao correo da configuración",
     "default-to-user-email": "Por defecto ó email do usuario",
     "default-warehouse": "Almacén por defecto",
     "delete": "Eliminar",
@@ -730,8 +730,8 @@
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
     "gap-found": "Oco atopado para o número %numero%, día %data%, %codserie% e empresa %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gap-found-not-fillable": "Oco atopado para o número %numero%, día %fecha%, %codserie% e empresa %idempresa%, non obstante non se vai encher.",
+    "gaps-out-of-range": "Atopáronse %count% ocos que non se poderán encher por estar a máis de 1000 números do último.",
     "general": "Xeral",
     "general-concepts": "Conceptos xerais",
     "general-data": "Datos xerais",
@@ -1774,7 +1774,7 @@
     "until-hour": "Hora fin",
     "until-subaccount": "Ata subconta",
     "update": "Actualizar",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Actualizar documentos abertos",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Actualizar prezos provedores",
     "update-time": "hora de actualización",
