--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -622,7 +622,7 @@
     "es-tax-regime-general": "Regime geral",
     "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "Regime fiscal One-Stop-Shop (IOSS)",
     "es-tax-regime-one-stop-shop-oss": "Regime fiscal One-Stop-Shop (OSS)",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-special-retail-traders": "regime fiscal especial para comerciantes varejistas",
@@ -1774,7 +1774,7 @@
     "until-hour": "até-hora",
     "until-subaccount": "até a subconta",
     "update": "Atualizar",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Atualizar documentos abertos",
     "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
