Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1458,7 +1458,7 @@
     "save": "Gorde",
     "save-data": "Datuak gorde",
     "save-filter": "Gorde iragazkia",
-    "scan-usb-devices": "Escanear dispositivos USB",
+    "scan-usb-devices": "USB gailuak eskaneatu",
     "sdk": "SDK",
     "search": "Bilatu",
     "search-customer": "Bezeroa bilatu",
@@ -1551,7 +1551,7 @@
     "solution": "Soluzioa",
     "sort": "Ordena",
     "sort-by-balance-asc": "Ordenatu saldoaren arabera (gorantz)",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Saldoaren arabera beherantz ordenatu",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Kodearen arabera beheranzko ordenean",
     "sort-by-column": "Zutabean sailkatu",
