--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -600,7 +600,7 @@
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
     "es-operation-tax-added-value": "Operação sujeita a IVA",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Operação sujeita ao IPSI (Ceuta e Melilla)",
     "es-operation-tax-igic": "Operação sujeita ao IGIC (Canárias)",
     "es-operation-tax-other": "Operação não sujeita aos impostos anteriores",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
@@ -622,8 +622,8 @@
     "es-tax-regime-general": "Regime geral",
     "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-ioss": "Regime fiscal One-Stop-Shop (IOSS)",
+    "es-tax-regime-one-stop-shop-oss": "Regime fiscal One-Stop-Shop (OSS)",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
     "es-tax-regime-special-small-business": "regime-fiscal-es-pequeno-negócio",
@@ -730,7 +730,7 @@
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
     "gap-found": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gap-found-not-fillable": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%, no entanto não será preenchido.",
     "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
