--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -873,7 +873,7 @@
     "invoice-receipts-diff": "Hi ha una diferència (%diff%) entre l'import de la factura i la suma dels rebuts.",
     "invoice-regularized-cant-change-date": "La factura es troba dins d'una regularització de %tax%. La data no es pot modificar.",
     "invoice-regularized-cant-delete": "La factura es troba dins d'una regularització de %tax%. No es pot eliminar.",
-    "invoice-without-acc-entry": "Factura sense assentament",
+    "invoice-without-acc-entry": "S'han trobat factures sense assentament comptable. Ves al llistat de factures i prem el botó per generar els assentaments.",
     "invoiced": "Facturat",
     "invoices": "Factures",
     "invoices-cant-generate-new-docs": "Les factures no poden generar nous documents",
