--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -446,7 +446,7 @@
     "default-role": "Default user group",
     "default-tax": "Default tax",
     "default-to-company-email": "By default to the company email",
-    "default-to-config-email": "Default to configured email",
+    "default-to-config-email": "Default to the configured email address",
     "default-to-user-email": "By default to the user's email",
     "default-warehouse": "Default warehouse",
     "delete": "Remove",
@@ -730,7 +730,7 @@
     "full-access": "Full access",
     "full-path": "Full path",
     "gap-found": "Gap found for number %numero%, day %fecha%, %codserie% and company %idempresa%",
-    "gap-found-not-fillable": "Gap found for number %numero%, date %fecha%, series %codserie% and company %idempresa%; however it will not be filled.",
+    "gap-found-not-fillable": "Gap found for number %numero%, date %fecha%, series %codserie% and company %idempresa%; it will not be filled.",
     "gaps-out-of-range": "Found %count% gaps that cannot be filled because they are more than 1000 numbers away from the last one.",
     "general": "General",
     "general-concepts": "General concepts",
@@ -873,7 +873,7 @@
     "invoice-receipts-diff": "There is a (%diff%) difference between the invoice amount and the sum of its receipts.",
     "invoice-regularized-cant-change-date": "The invoice is within a regularization of %tax%. The date cann't be modified.",
     "invoice-regularized-cant-delete": "The invoice is within a regularization of %tax%. It cann't be deleted.",
-    "invoice-without-acc-entry": "Invoice without accounting entry",
+    "invoice-without-acc-entry": "Invoice found without an accounting entry. Go to the invoices list and click the \"Generate Entries\" button.",
     "invoiced": "Invoiced",
     "invoices": "Invoices",
     "invoices-cant-generate-new-docs": "Invoices can't generate new documents",
