--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -873,7 +873,7 @@
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
-    "invoice-without-acc-entry": "Factura sin asiento",
+    "invoice-without-acc-entry": "Se han encontrado factura sin asiento contable. Ve al listado de facturas y pulsa el botón de generar asientos.",
     "invoiced": "Facturado",
     "invoices": "Facturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
