--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -97,7 +97,7 @@
     "already-installed": "Già installato",
     "already-installed-p": "Il programma è già installato",
     "always-to-company-email": "Sempre alla mail aziendale",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre all'email di configurazione",
     "amount": "Quantità",
     "amount-without-discount": "Importo senza sconto",
     "and": "e",
