feat: añadido filtro a listFamilia y listProducto

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -479,6 +479,7 @@
     "desc-provider-name": "Description provider name",
     "desc-rate-code": "Code for internal use of the rate.",
     "desc-vat-document": "Identifier of the document where the tax is applied",
+    "descendant-of": "Descendant of",
     "description": "Description",
     "description-1": "Description 1",
     "description-2": "Description 2",
