Añadido proceso cron para restaurar las notificaciones de email (del core) eliminadas. Y añadidas traducciones al inglés.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1435,6 +1435,7 @@
     "responsible": "Responsible",
     "restore": "Restore",
     "restore-data": "Restore data",
+    "restoring-notifications": "Restoring notifications",
     "result": "Result",
     "retention": "Retention",
     "retentions": "Retentions",
