--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1435,6 +1435,7 @@
     "responsible": "Responsable",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
+    "restoring-notifications": "Restaurando notificaciones",
     "result": "Resultado",
     "retention": "Retención",
     "retentions": "Retenciones",
