--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -97,7 +97,7 @@
     "already-installed": "Já instalado",
     "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre para o e-mail da configuração",
     "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
     "and": "e",
@@ -730,7 +730,7 @@
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
     "gap-found": "Intervalo encontrado para o número %numero%, dia %data%, %codserie% e empresa %idempresa%",
-    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gap-found-not-fillable": "Lacuna encontrada para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%, no entanto não será preenchida.",
     "gaps-out-of-range": "Foram encontradas %count% lacunas que não poderão ser preenchidas por estarem a mais de 1000 números do último.",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
