Correcciones al widget json y a los permisos y traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1435,7 +1435,6 @@
     "responsible": "Responsible",
     "restore": "Restore",
     "restore-data": "Restore data",
-    "restoring-notifications": "Restoring notifications",
     "result": "Result",
     "retention": "Retention",
     "retentions": "Retentions",
@@ -1775,7 +1774,7 @@
     "until-hour": "Until hour",
     "until-subaccount": "Until subaccount",
     "update": "Update",
-    "update-docs-address": "Update open documents",
+    "update-docs-address": "Update Open Documents",
     "update-stock": "Update stock",
     "update-supplier-prices": "Update supplier prices",
     "update-time": "Update time",
