--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1109,7 +1109,7 @@
     "no-agent": "Bez agenta",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
-    "no-devices-detected-scan-usb": "Nie wykryto urządzeń. Spróbuj zeskanować.",
+    "no-devices-detected-scan-usb": "Nie wykryto urządzeń. Spróbuj przeskanować ponownie.",
     "no-document-selected": "Nie wybrano żadnego dokumentu",
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
@@ -1393,7 +1393,7 @@
     "refunds": "Zwróty",
     "register": "Zarejestruj",
     "register-install-ad": "Zarejestruj instalację FacturaScripts",
-    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednego z naszych ekskluzywnych wtyczek. Pomaga nam również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
+    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala pobrać jedną z naszych ekskluzywnych wtyczek. Pomoże nam to również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Zarejestruj swoją instalację, aby móc aktualizować płatne lub prywatne wtyczki.",
     "register-symbol": "#",
