Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -446,7 +446,7 @@
     "default-role": "Erabiltzaile talde lehentetsia",
     "default-tax": "Zerga lehenetsia",
     "default-to-company-email": "Lehenespenez enpresaren posta elektronikora",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Lehenetsi konfigurazioko helbide elektronikora",
     "default-to-user-email": "Lehenespenez erabiltzailearen posta elektronikora",
     "default-warehouse": "Biltegi lehenetsia",
     "delete": "Kendu",
@@ -612,7 +612,7 @@
     "es-tax-exception-e5": "Espainia: BEZaren 25. legearen artikuluaren salbuespena",
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "IGICari buruzko 20\/1991 Legearen 10.1 artikuluaren arabera salbuetsitako barne-eragiketak",
     "es-tax-exception-n5": "IGIC Legearen 25. artikuluaren aplikazioagatik exentzat jotako operazioak",
     "es-tax-exception-passive-subject": "Espainia: N6 subjektu pasiboaren inbertsioa (84. artikulua, LIVA)",
     "es-tax-regime-agrarian": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
