--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -97,7 +97,7 @@
     "already-installed": "Już zainstalowano",
     "already-installed-p": "Program jest już zainstalowany",
     "always-to-company-email": "Zawsze na email firmy",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Zawsze do ustawień e-maila",
     "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
     "and": "y",
