--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -703,7 +703,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
-    "folders-not-writable": "Não se pode escrever sobre as pastas de FacturaScripts: %folders%",
+    "folders-not-writable": "Não é possível escrever nas pastas do FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
     "footer": "Rodapé",
@@ -1282,7 +1282,7 @@
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
-    "plugins-required": "Plugins exigidos",
+    "plugins-required": "Plugins necessários",
     "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
